# genuine_bs

./: README.md  setup.cfg  setup.py
src/genuine_bs/: __init__.py  bs.py  test.py
