[metadata]
name = genuine-bs-shengxio
version = 1.2.3
author = Roland Ding
author_email = shengxio@ualberta.ca
description = A complete random content generator created based on en_core_web_md vocabulary.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shengxio/genuine_bs
project_urls =
    Bug Tracker = https://github.com/shengxio/genuine_bs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src